# napari-sam3-assistant

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
docs/: cpu_only.md
src/napari_sam3_assistant/: device_utils.py  napari.yaml
src/napari_sam3_assistant/adapters/: __init__.py  sam3_backend.py
src/napari_sam3_assistant/core/: __init__.py  coordinates.py  diagnostics.py  models.py
src/napari_sam3_assistant/mask_operations/: __init__.py  accepted_objects_tab.py  class_merge_tab.py  cleanup_service.py  component_analysis_service.py  component_table_widget.py  export_service.py  final_merge_export_tab.py  mask_cleanup_tab.py  merge_service.py  models.py  object_review_tab.py  panel.py  registry_service.py  utils.py
src/napari_sam3_assistant/notifications/: __init__.py  task_complete_sound.py
src/napari_sam3_assistant/providers/: __init__.py  sam3_repo_provider.py
src/napari_sam3_assistant/services/: __init__.py  checkpoint_service.py  layer_writer.py  layer_writer_older.py  prompt_collector.py  prompt_state_service.py
src/napari_sam3_assistant/task_runners/: __init__.py  image_runner.py  refinement_runner.py  video_runner.py
src/napari_sam3_assistant/widgets/: __init__.py  collapsible_panel.py  live_point_refinement.py  main_widget.py  mask_operations_widget.py  mode_switch_bar.py
src/napari_sam3_assistant/widgets/advanced/: advanced_mode_controller.py  advanced_mode_panel.py
src/napari_sam3_assistant/widgets/shared/: activity_status_controller.py  data_profile_controller.py  result_visibility_controller.py  shared_context.py  task_router.py  ui_state_models.py
src/napari_sam3_assistant/widgets/simple/: simple_mode_controller.py  simple_mode_panel.py  simple_prompt_panel.py  simple_result_panel.py  simple_run_panel.py  simple_task_panel.py
tests/: test_checkpoint_service.py  test_coordinates.py  test_imports.py  test_layer_writer.py  test_main_widget_static.py  test_prompt_collector.py  test_sam3_adapter_utils.py  test_task_complete_sound.py
windows_sam31_workaround/: README.md
windows_sam31_workaround/sam3/model/: decoder.py  sam3_tracker_utils.py
windows_sam31_workaround/sam3/perflib/: __init__.py
