[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-sam3-assistant"
version = "4.0.0"
description = "A napari plugin for Segment Anything Model 3 (SAM3) image segmentation with Simple and Advanced workflows, text, points, boxes, exemplars, large-image ROI inference, mask operations, and 3D/video-like propagation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Wulin Teo" }
]
dependencies = [
  "napari>=0.5.0",
  "qtpy",
  "numpy",
  "pillow",
]
keywords = ["napari", "SAM3", "segmentation", "tracking", "microscopy", "image analysis"]
classifiers = [
  "Framework :: napari",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[project.urls]
Homepage = "https://github.com/wulinteousa2-hash/napari-sam3-assistant"
Repository = "https://github.com/wulinteousa2-hash/napari-sam3-assistant"
Issues = "https://github.com/wulinteousa2-hash/napari-sam3-assistant/issues"

[project.entry-points."napari.manifest"]
napari-sam3-assistant = "napari_sam3_assistant:napari.yaml"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
napari_sam3_assistant = ["napari.yaml"]

[tool.setuptools.packages.find]
where = ["src"]
